src/objects/TestMetadataType__mdt.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <metadataRelationshipControllingField>TestMetadataType__mdt.Metadata_Relationship__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>TestMetadataType1</relationshipLabel>
        <relationshipName>TestMetadataType1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Checkbox_field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Checkbox field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_field__c</fullName>
        <label>Date field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_field__c</fullName>
        <label>Date/time field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metadata_Relationship__c</fullName>
        <label>Metadata Relationship</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>TestMetadataType</relationshipLabel>
        <relationshipName>TestMetadataType</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Percent_field__c</fullName>
        <label>Percent field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_field__c</fullName>
        <label>Phone field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_field__c</fullName>
        <label>Picklist field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                    <default>true</default>
                    <label>Value1</label>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area_Long_field__c</fullName>
        <label>Text Area Long field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_field__c</fullName>
        <label>Text Area field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL_field__c</fullName>
        <label>URL field</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>email_field__c</fullName>
        <label>email field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>number_field__c</fullName>
        <label>number field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TestMetadataType</label>
    <pluralLabel>TestMetadataType</pluralLabel>
</CustomObject>